2009-12-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/tex-mode.el (latex-complete)
	(latex-indent-or-complete): Remove.
	(latex-mode): Set completion-at-point-functions instead.

	Provide a standard completion command and hook it into TAB.
	* minibuffer.el (completion-at-point-functions): New var.
	(completion-at-point): New command.
	* indent.el (indent-for-tab-command): Handle the `complete' behavior.
	* progmodes/python.el (python-mode-map): Use completion-at-point.
	(python-completion-at-point): Rename from python-partial-symbol and
	adjust for use in completion-at-point-functions.
	(python-mode): Setup completion-at-point for Python completion.
	* emacs-lisp/lisp.el (lisp-completion-at-point): New function
	extracted from lisp-complete-symbol.
	(lisp-complete-symbol): Use it.
	* emacs-lisp/lisp-mode.el (emacs-lisp-mode): Use define-derived-mode,
	setup completion-at-point for Elisp completion.
	(emacs-lisp-mode-map, lisp-interaction-mode-map):
	Use completion-at-point.
	* ielm.el (ielm-map): Use completion-at-point.
	(inferior-emacs-lisp-mode): Setup completion-at-point-functions.
	* progmodes/sym-comp.el: Move to...
	* obsolete/sym-comp.el: Move from progmodes.

2009-12-07  Eli Zaretskii  <eliz@gnu.org>

	Prevent save-buffer in Rmail buffers from using the coding-system
	of the current message, and from clobbering the encoding mnemonics
	in the mode line (Bug#4623).

	* mail/rmail.el (rmail-swap-buffers): Swap encoding and modified
	flag, too.
	(rmail-message-encoding): New variable.
	(rmail-write-region-annotate): Record the encoding of the current
	message in rmail-message-encoding.
	(rmail-after-save-hook): New function, restores the encoding of
	the current message after the message collection is saved.

2009-12-07  Juri Linkov  <juri@jurta.org>

	* progmodes/grep.el (grep-read-files): Use `completing-read'
	instead of `read-string'.  Set its `collection' arg to
	`read-file-name-internal'.  (Bug#4301)
